2004-11-17  Derek Price  <derek@ximbiot.com>

	* getdate.y, getopt.c, getopt1.c, getopt_.h, getopt_int.h, xgetcwd.c:
	Update from GNULIB.

2004-11-15  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_LIBADD): Add @ALLOCA@.

2004-11-11  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add test-getdate.sh.

2004-11-11  Mark D. Baushke  <mdb@cvshome.org>

	* alloca_.h, allocsa.h, mktime.c: Update from GNULIB.

2004-11-11  Mark D. Baushke  <mdb@cvshome.org>

	* strftime.c, getdate.y: Update from GNULIB.
	* getdate.c: Regenerated.

2004-11-10  Mark D. Baushke  <mdb@cvshome.org>

	* test-getdate.sh: Remove non-portable 'Feb 29, 2096 8 years'
	test case. Add comments about portable dates.

2004-11-10  Mark D. Baushke  <mdb@cvshome.org>

	* test-getdate.sh (TZ): Set to UTC0 instead of UTC to fix MacOS X
	problem.

2004-11-10  Mark D. Baushke  <mdb@cvshome.org>

	* mktime.c (SHR): New macro, which is a portable substitute for >>
	that should work even on Crays.
	Problem reported by Mark D. Baushke.
	(TIME_T_MIDPOINT, ydhms_diff, __mktime_internal): Use it.
	(Patch from Paul Eggert of GNULIB.)

	* Makefile.am (getdate_LDADD): Add @ALLOCA@.
	* Makefile.in: Regenerated.

2004-11-09  Mark D. Baushke  <mdb@cvshome.org>

	* strftime.c: Update from GNULIB.

2004-11-05  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Add "readlink.c" to project.
	* libcvs.dep: Regenerate for "libcvs.dsp" change.
	* libcvs.mak: Regenerate for "libcvs.dsp" change.

2004-11-05  Mark D. Baushke  <mdb@cvshome.org>

	* readlink.c: Update from GNULIB.

2004-11-04  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Add "xreadlink.c" and "xreadlink.h" to project.
	* libcvs.dep: Regenerate for "libcvs.dsp" change.
	* libcvs.mak: Regenerate for "libcvs.dsp" change.

2004-11-04  Mark D. Baushke  <mdb@cvshome.org>

	* allocsa.h, allocsa.valgrind: Update from GNULIB.
	* Makefile.in: Regenerated.

2004-11-04  Mark D. Baushke  <mdb@cvshome.org>
