@@ -8,8 +8,8 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline getnline getndelim2 gethostname strcase getpass-gnu gettimeofday timespec gettime unlocked-io tzset restrict time_r mktime minmax memmove nanosleep stat lstat strerror vasprintf malloc realloc strftime xsize getpagesize md5 stdint yesno allocsa setenv getdate readlink xreadlink
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt allocsa atexit dirname exit exitfail extensions fnmatch fnmatch-posix getdate gethostname getline getndelim2 getnline getopt getpagesize getpass-gnu gettext gettime gettimeofday lstat malloc md5 memmove minmax mkstemp mktime nanosleep pathmax readlink realloc regex restrict rpmatch save-cwd setenv stat stdbool stdint strcase strerror strftime time_r timespec tzset unlocked-io vasnprintf vasprintf xalloc xgetcwd xreadlink xsize yesno
+# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline getnline getndelim2 gethostname strcase getpass-gnu gettimeofday timespec gettime unlocked-io tzset restrict time_r mktime minmax memmove nanosleep stat lstat strerror vasprintf malloc realloc strftime xsize getpagesize md5 stdint yesno allocsa setenv getdate readlink xreadlink xgethostname
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt allocsa atexit dirname exit exitfail extensions fnmatch fnmatch-posix getdate gethostname getline getndelim2 getnline getopt getpagesize getpass-gnu gettext gettime gettimeofday lstat malloc md5 memmove minmax mkstemp mktime nanosleep pathmax readlink realloc regex restrict rpmatch save-cwd setenv stat stdbool stdint strcase strerror strftime time_r timespec tzset unlocked-io vasnprintf vasprintf xalloc xgetcwd xgethostname xreadlink xsize yesno
 
 AUTOMAKE_OPTIONS = 1.5 gnits no-dependencies
 
@@ -287,6 +287,12 @@ libgnu_a_SOURCES += xalloc.h xmalloc.c
 libgnu_a_SOURCES += xgetcwd.h xgetcwd.c
 
 ## end   gnulib module xgetcwd
+
+## begin gnulib module xgethostname
+
+libgnu_a_SOURCES += xgethostname.h xgethostname.c
+
+## end   gnulib module xgethostname
 
 ## begin gnulib module xreadlink
 
