@@ -1,0 +1,1 @@
+char *xgethostname (void);
