@@ -1,3 +1,8 @@
+2004-11-19  Derek Price  <derek@ximbiot.com>
+
+	* xgethostname.h, xgethostname.c: New files from GNULIB.
+	* Makefile.am (libcvs_a_SOURCES): Add new files.
+
 2004-11-17  Derek Price  <derek@ximbiot.com>
 
 	* getdate.y, getopt.c, getopt1.c, getopt_.h, getopt_int.h, xgetcwd.c:
